Safari intermittently stopping playing Spotify Web Player (currentTime goes backwards) https://bugs.webkit.org/show_bug.cgi?id=233257 <rdar://problem/85504967>

Reviewed by Eric Carlson.

Source/WebKit:

Test: media/video-currentTime-duration.html

Clamp currentMediaTime() to [0, durationMediaTime()].

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::currentMediaTime const):

LayoutTests:

* media/video-currentTime-duration-expected.txt: Added.
* media/video-currentTime-duration.html: Added.



Canonical link: https://commits.webkit.org/245247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287050 268f45cc-cd09-0410-ab3c-d52691b4dbfc